2007-12-16  Dmitry Xmelkov  <dmix@gmail.ru>

	* NEWS: Add the chapter 'Main changes from 1.4 to 1.5'.

2007-12-12  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/io90pwm216.h: Fix fuse data.
	* include/avr/io90pwm316.h: Ditto.

2007-12-12  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom32hvb.h: Remove unused register.
	* include/avr/io90pwm216.h: Fix IVT size. Fix for bug #21749.
	* include/avr/io90pwm316.h: Ditto.
	* include/avr/iomx8.h: Remove bits for mega48. Fix for bug #21691.
	* include/avr/io90pwm316.h: Add bit defs. Fix for bug #21743.
	* include/avr/iomxx0_1.h: Fix bit defs. Fix for bug #21626.
	* include/avr/iotnx61.h: Fix bit defs. Fix for bug #21521.

2007-12-11  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/lock.h: Add documentation for the Lockbit API.
	* doc/api/doxygen.config.in: Add avr/lock.h to the doc list.
	* include/avr/iom8.h: Add Fuse and Lockbit data.
	* include/avr/iotn43u.h: Add Lockbit data.
	* include/avr/io90pwm216.h: Add Lockbit data. Fix fuse data.
	* include/avr/io90pwm316.h: Add Lockbit data. Fix fuse data.
	* include/avr/io90pwm2b.h: Add Lockbit data. Fix fuse data.
	* include/avr/io90pwm3b.h: Add Lockbit data. Fix fuse data.
	* include/avr/iom88.h: Add Fuse data.
	* include/avr/iom168.h: Add Fuse data.
	* include/avr/iom128.h: Formatting.
	* include/avr/iom16.h: Add Fuse and Lockbit data.
	* include/avr/iom32.h: Ditto.
	* include/avr/iom64.h: Ditto.
	* include/avr/iom325.h: Ditto.
	* include/avr/iom3250.h: Ditto.
	* include/avr/iom645.h: Ditto.
	* include/avr/iom6450.h: Ditto.
	* include/avr/iom329.h: Ditto.
	* include/avr/iom3290.h: Ditto.
	* include/avr/iom649.h: Ditto.
	* include/avr/iom6490.h: Ditto.
	* include/avr/iom640.h: Ditto.
	* include/avr/iom1280.h: Ditto.
	* include/avr/iom1281.h: Ditto.
	* include/avr/iom2560.h: Ditto.
	* include/avr/iom2561.h: Ditto.
	* include/avr/iousb646.h: Ditto.
	* include/avr/iousb647.h: Ditto.
	* include/avr/iousb1286.h: Ditto.